--- a/style.css
+++ b/style.css
@@ -1,41 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Oswald&display=swap');
-
 html{
-    font-family: 'Oswald', sans-serif;
+    height: 100%;
 }
 
 body{
-    background-color: #fff;
-    display: flex;
-    background-color: #333;
-}
-
-table{
-    border: .2rem solid #000;
-    width: 30rem;
-    background-color: #999;
-}
-
-table tr{
-    background-color: aquamarine;
-}
-
-table td{
-    background-color: aquamarine;
-}
-
-td input{
-    height: 1rem;
-    width: 1rem;
-}
-
-p{
-    font-size: 1.2rem;
+    /* background: linear-gradient(to bottom, #268FF5, #F53427); */
     color: #fff;
-    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(./img/backGround.png);
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-#notes{
-    margin-left: 2rem;
-    height: 25rem;
+div {
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid #fff;
+    border-radius: 1rem;
+    padding: 2rem .3rem;
+    text-align: center;
+    box-shadow: 0 .2rem 1rem #aaa;
+}
+
+.filter{
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    /* background-color: rgba(243, 243, 243, 0.1); */
+    background-color: rgba(99, 186, 248, 0.219);
+}
+
+input{
+    width: 25rem;
+    height: 2rem;
+    border-radius: .2rem;
+    border: none;
+    background-color: rgba(240, 240, 240, .1);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 3px 5px rgba(5, 151, 242, .2);
+}
+
+#licence{
+    height: auto;
+    width: auto;
+}
+
+#send{
+    margin-bottom: 0;
+}
+
+button{
+    margin: 2rem 0;
+    width: 25rem;
+    height: 2rem;
+    border-radius: .2rem;
+    color: #000000;
+    background-color: rgba(240, 240, 240, .2);
+    border: unset;
+    font-size: 1rem;
+    box-shadow: 0 3px 5px rgba(5, 151, 242, .2);
+}
+
+label{
+    margin-top: 1rem;
+
+}
+
+#login{
+    margin-top: 9.5rem;
+}
+
+#register{
+    display: none;
+    margin-top: 1.7rem;
 }
